Fixed #content jumping error?

--- a/src/app/(page)/research/styles/Research.module.css
+++ b/src/app/(page)/research/styles/Research.module.css
@@ -1,8 +1,3 @@
-.scroll-dummy-inner,
-.scroll-dummy {
-  pointer-events: all !important;
-}
-
 .container {
   height: calc(100vh - 48px);
   width: 100%;
