--- a/src/app/(work)/components/ListView/ListView.module.css
+++ b/src/app/(work)/components/ListView/ListView.module.css
@@ -13,6 +13,7 @@ ul.listview {
 
 ul.listview a {
   cursor: none;
+  color: var(--text-color);
 }
 
 ul.listview li.project,
