--- a/src/global.css
+++ b/src/global.css
@@ -76,8 +76,8 @@ html {
 }
 body {
   font-family: var(--font-weight-text);
-  background: var(--background-color);
-  color: var(--text-color);
+  background: var(--background-color) !important;
+  color: var(--text-color) !important;
 
   font-size: var(--font-size-200);
   line-height: var(--line-height-200);
@@ -125,6 +125,16 @@ header {
   position: fixed;
   height: 100vh;
   overflow-y: scroll;
+}
+
+#content {
+  height: 100dvh;
+}
+
+#content.no-scroll {
+  overflow-y: hidden !important;
+  height: auto !important;
+  position: fixed !important;
 }
 
 #root {
@@ -197,7 +207,7 @@ a:visited {
 button {
   background: transparent;
   border: 0;
-  color: var(--text-color);
+  color: var(--text-color) !important;
   padding: 0;
   margin: 0;
 }
@@ -321,9 +331,7 @@ footer {
   }
 
   #content.no-scroll {
-    overflow-y: hidden !important;
     height: 100vh !important;
-    position: fixed !important;
   }
 
   .is-safari .wrapper {
